; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/extr_cdbase.c_wcsdupstr.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/extr_cdbase.c_wcsdupstr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32*)* @wcsdupstr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @wcsdupstr(i32* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  store i32* %0, i32** %3, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = call i64 @wcstombs(i8* null, i32* %6, i64 0)
  store i64 %7, i64* %5, align 8
  %8 = load i64, i64* %5, align 8
  %9 = icmp eq i64 %8, -1
  br i1 %9, label %10, label %11

10:                                               ; preds = %1
  store i8* null, i8** %2, align 8
  br label %25

11:                                               ; preds = %1
  %12 = load i64, i64* %5, align 8
  %13 = call i8* @malloc(i64 %12)
  store i8* %13, i8** %4, align 8
  %14 = load i8*, i8** %4, align 8
  %15 = load i32*, i32** %3, align 8
  %16 = load i64, i64* %5, align 8
  %17 = call i64 @wcstombs(i8* %14, i32* %15, i64 %16)
  store i64 %17, i64* %5, align 8
  %18 = load i64, i64* %5, align 8
  %19 = icmp eq i64 %18, -1
  br i1 %19, label %20, label %23

20:                                               ; preds = %11
  %21 = load i8*, i8** %4, align 8
  %22 = call i32 @free(i8* %21)
  store i8* null, i8** %2, align 8
  br label %25

23:                                               ; preds = %11
  %24 = load i8*, i8** %4, align 8
  store i8* %24, i8** %2, align 8
  br label %25

25:                                               ; preds = %23, %20, %10
  %26 = load i8*, i8** %2, align 8
  ret i8* %26
}

declare dso_local i64 @wcstombs(i8*, i32*, i64) #1

declare dso_local i8* @malloc(i64) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
